# PlotPy

./: .coveragerc  .env  .env.template  .gitignore  .isort.cfg  .pylintrc  CHANGELOG  CHANGELOG.md  LICENSE-EN  LICENSE-FR  MANIFEST.in  README  README.md  build_inplace64.bat  conftest.py  plotpy-tests.desktop  pyproject.toml  requirements-min.txt  requirements.txt  setup.cfg  setup.py  test_QGraphicsDropShadowEffect .py  test_nan_fix.py
.github/workflows/: build.yml  build_deploy.yml  build_wheels.yml  python-package.yml  test.yml  test_pyqt5.yml  test_pyqt6.yml  test_pyside6.yml
colormaps/: README.md  colormap.py  matplotlib_cmaps.py
dev/: README.md  pip_list.txt  requirements.txt
doc/: Makefile  basic_example.py  changelog.rst  conf.py  development.rst  examples.rst  gui_to_plotpy.csv  gui_to_plotpy.rst  index.rst  installation.rst  licenses.rst  make.bat  overview.rst  requirements.rst  sift.rst  update_requirements.py
doc/dev/: build.rst  contribute.rst  gitworkflow.rst  guiqwt_to_plotpy.csv  guiqwt_to_plotpy.rst  index.rst  platform.rst  platforms.rst  v1_to_guidata_v3.csv  v1_to_v2.csv  v1_to_v2.rst
doc/features/: colormapmanager.rst  events.rst  fit.rst  fliprotate.rst  imagefile.rst  index.rst  io.rst  pyplot.rst  resizedialog.rst  selectdialog.rst  signals.rst
doc/features/items/: builder.rst  examples.rst  index.rst  overview.rst  reference.rst
doc/features/mathutils/: colormap.rst  colormaps.rst  geometry.rst  index.rst  scaler.rst
doc/features/panels/: index.rst  overview.rst  reference.rst
doc/features/plot/: examples.rst  index.rst  overview.rst  reference.rst
doc/features/styles/: index.rst  overview.rst  reference.rst
doc/features/tools/: examples.rst  (+3 more)
doc/intro/: examples.rst  index.rst  installation.rst  licenses.rst  motivation.rst  overview.rst
doc/reference/: annotations.rst  baseplot.rst  builder.rst  contour.rst  cross_section.rst  curve.rst  image.rst  index.rst  io.rst  label.rst  panels.rst  plot.rst  pyplot.rst  qthelpers.rst  shapes.rst  signals.rst  styles.rst  tools.rst  widgets_rotatecrop.rst
doc/release_notes/: index.rst  release_2.00.md  release_2.01.md  release_2.02.md  release_2.03.md  release_2.04.md  release_2.05.md  release_2.06.md  release_2.07.md  release_2.08.md  release_2.09.md  release_2.10.md
doc/source/: basic_example.py  conf.py  development.rst  disthelpers.rst  examples.rst  examples_gui.rst  gui_to_plotpy.csv  gui_to_plotpy.rst  index.rst  installation.rst  licenses.rst  overview.rst  sift.rst
media/LinkedIn/: 2023_10_31-V2.md
media/X/: 2023_10_31-V2.txt
plotpy/: __init__.py  builder.py  config.py  constants.py  coords.py  env.py  events.py  io.py  lutrange.py  pyplot.py
plotpy/builder/: __init__.py  annotation.py  curvemarker.py  image.py  label.py  plot.py  shape.py
plotpy/colormaps/: colormap.py
plotpy/console/: dochelpers.py  interpreter.py  syntaxhighlighters.py
plotpy/core/: __init__.py  builder.py  constants.py  coords.py  events.py  io.py  itemlist.py  lutrange.py  panels.py  scaler.py  signals.py
plotpy/data/: colormaps_default.json
plotpy/gui/: __init__.py
plotpy/interfaces/: __init__.py  common.py  items.py  panel.py  plotmanager.py
plotpy/items/: __init__.py  annotation.py  annotations.py  contour.py  grid.py  histogram.py  label.py  polygon.py  polygonmap.py
plotpy/locale/: plotpy.pot
plotpy/mathutils/: __init__.py  arrayfuncs.py  colormap.py  colormaps.py  geometry.py  scaler.py
plotpy/panels/: __init__.py  base.py  contrastadjustment.py  itemlist.py
plotpy/plot/: __init__.py  base.py  interactive.py  manager.py  plotwidget.py  scaledraw.py
plotpy/styles/: __init__.py  axes.py  base.py  curve.py  errorbar.py  histogram.py  image.py  label.py  polygonmap.py  shape.py
plotpy/tests/: __init__.py  conftest.py  data.py  vistools.py
plotpy/tools/: __init__.py  annotation.py  annotations.py  axes.py  base.py  cross_section.py  cursor.py  curve.py  image.py  item.py  label.py  misc.py  plot.py  plotpy.po  selection.py  shape.py  shapes.py
plotpy/utils/: __init__.py  _cm.py  colormap.py  contour.py  datetime.py  debug.py  disthelpers.py  geometry.py  gui.py  icons.py  misc.py  misc_from_gui.py  module.py  packaging_helpers.py  path.py  program.py  qthelpers.py  scaler.py  strings.py  toqimage.py
plotpy/widgets/: __init__.py  _colormap_slider.py  about.py  base.py  basetransform.py  builder.py  colormap.py  colormap_editor.py  colormap_manager.py  colormap_widget.py  console.py  contour.py  debug.py  dockable_console.py  dockables.py  events.py  fit.py  fliprotate.py  geometry.py  imagefile.py  interfaces.py  io.py  itemlist.py  labels.py  panels.py  qtdesigner.py  qthelpers.py  qthelpers_guidata.py  resizedialog.py  rotatecrop.py  scaler.py  selectdialog.py  signals.py
qtdesigner/: plotplugin.py
requirements/: bundle.txt  codequality.txt  create_exe.txt  setup.txt  testing.txt
scripts/: build-wheels.sh  build_inplace.bat  build_wheels.bat  clean_up.bat  display_cov.bat  reinstall_dev.py  run_coverage.bat  run_pylint.bat  run_with_env.py  upgrade_env.bat  upgrade_stack.bat  utils.bat
sift/: app.py  create_exe.py  run.pyw  sift.pyw
src/: arrays.hpp  contour2d.pyx  debug.hpp  histogram2d.pyx  mandelbrot.pyx  pcolor.cpp  points.hpp  scaler.cpp  scaler.hpp  traits.hpp
tests/gui/: __init__.py  autoscale_shapes.py  benchmark_animations.py  bigimages.py  builder.py  computations.py  contour.py  cursors.py  customize_shape_tool.py  dotarraydemo.py  filtertest1.py  filtertest2.py  fit.py  fliprotate.py  fontparam.py  get_point.py  get_segment.py  hist2d.py  hist2d_func.py  image_masked.pickle  image_masked_xy.pickle  imagefilter.py  imagesuperp.py  loadsaveitems_hdf5.py  loadsaveitems_pickle.py  mandelbrot.py  plot_log.py  plot_types.py  plot_yreverse.py  qtdesigner.ui  rotatecrop.py  sift.py  styles.py  test_line.py  transform.py
tests/scripts/: __init__.py  bool_selector.py  data.py  datasetgroup.py  disthelpers.py  hdf5.py  inheritance.py  test.h5  translations.py
tests/unit/: test_bool_selector.py  test_builder_curve.py  test_contour.py  test_hdf5.py
(+639 files in other folders)
