# plotpy setup configuration file

[build-system]
requires = ["setuptools", "wheel", "cython ~= 0.29.0", "numpy >= 1.17"]
build-backend = "setuptools.build_meta"

[project]
name = "PlotPy"
authors = [{ name = "Codra", email = "p.raybaut@codra.fr" }]
description = "Curve and image plotting tools for Python/Qt applications"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Operating System :: Microsoft :: Windows :: Windows 8",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
    "Topic :: Utilities",
]
requires-python = ">=3.8, <4"
dependencies = [
    "guidata>=3.4",
    "PythonQwt>=0.12.1",
    "NumPy>=1.17",
    "SciPy>=1.3",
    "Pillow",
    "tifffile",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/PlotPyStack/plotpy/"
Documentation = "https://plotpy.readthedocs.io/en/latest/"

[project.gui-scripts]
plotpy-tests = "plotpy.tests:run"

[project.optional-dependencies]
dev = ["black", "isort", "pylint", "Coverage", "Cython"]
doc = [
    "PyQt5",
    "sphinx",
    "myst_parser",
    "sphinx-copybutton",
    "sphinx_qt_documentation",
    "python-docs-theme",
]
test = ["pytest", "pytest-xvfb"]

[tool.setuptools.packages.find]
include = ["plotpy*"]

[tool.setuptools.package-data]
"*" = ["*.png", "*.svg", "*.mo", "*.cfg", "*.toml", "*.dcm", "*.ui", "*.json"]

[tool.setuptools.dynamic]
version = { attr = "plotpy.__version__" }
