# plotpy setup configuration file

# Important note:
# Requirements (see [options]) are parsed by doc\genreqs.py to generate documentation

[metadata]
name = plotpy
version = attr: plotpy.__version__
author = CODRA
author_email = cea-plotpy@codra.fr
url = https://codra-ingenierie-informatique.github.io/plotpy/
description = Signal and image processing software
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Topic :: Scientific/Engineering
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6, <4
install_requires =
    numpy>=1.3
    SciPy>=0.7
    Pillow
    PythonQwt==0.9.0
    h5py==2.8.0
    chardet
packages = find:
include_package_data = True

[options.exclude_package_data]
codraft = *.po, *.pot

[options.entry_points]
console_scripts =
    codraft-tests = codraft.tests:run
    codraft-demo = codraft.tests.demo:run
    codraft-alltests = codraft.tests.all_tests:run
gui_scripts =
    codraft = codraft.app:run

[options.extras_require]
dev =
    black
    isort
    pylint
    Coverage