# plotpy setup configuration file

# Important note:
# Requirements (see [options]) are parsed by doc\genreqs.py to generate documentation

[metadata]
name = plotpy
version = attr: plotpy.__version__
author = CODRA
author_email = cea-plotpy@codra.fr
url = https://codra-ingenierie-informatique.github.io/plotpy/
description = Signal and image processing software
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities,
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: OS Independent
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.8, <4
install_requires =
    guidata
    numpy>=1.23.5
    SciPy>=1.9.3
    Pillow
    PythonQwt==0.9.0
    h5py==2.8.0
    chardet
packages = find_namespace:
include_package_data = True

[options.extras_require]
dev =
    black
    isort
    pylint
    Coverage
doc =
    sphinx
src =
    Cython